src/objects/HCP_Contract_EVNT__c.object
<CustomObject>
    <description>Contains contract details between Lilly and event speakers. 
Created by John A Adams 10/2/2013</description>
    <fields>
        <fullName>Account_EVNT_MVN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship between HCP Contracts and Accounts
Created by John A Adams 10/9/2013</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HCP Contracts</relationshipLabel>
        <relationshipName>HCP_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Fee_EVNT_MVN__c</fullName>
        <formula>IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;50&quot;), 50,
 IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;60&quot;), 60,
  IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;70&quot;), 70,
   IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;80&quot;), 80,
    IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;90&quot;), 90,
IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;100&quot;), 100,
 IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;110&quot;), 110,
  IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;120&quot;), 120,
   IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;130&quot;), 130,
    IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;140&quot;), 140,
IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;150&quot;), 150,
 IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;160&quot;), 160,
  IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;170&quot;), 170,
   IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;180&quot;), 180,
    IF(ISPICKVAL(Fee_Values_EVNT_MVN__c , &quot;190&quot;), 190,666
    )
   )
  )
 )
)
    )
   )
  )
 )
)
    )
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Request_Status_EVNT_MVN__c</fullName>
        <description>Records the status of the contract.
Created by John A Adams 10/8/2013</description>
        <label>Contract Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Lilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_EVNT_MVN__c</fullName>
        <description>Select speakers country to start fee calculation process
Created by John A Adams 10/4/2013</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Tier_EVNT_MVN__c</fullName>
        <description>Country and Tier levels that fee is based upon
Created by John A Adams 10/2/2013</description>
        <label>Country Tier</label>
        <picklist>
            <controllingField>Country_EVNT_MVN__c</controllingField>
            <picklistValues>
                <fullName>France Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France Tier 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Tier 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Tier 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Time_EVNT_MVN__c</fullName>
        <description>Amount of hours during the event speaker is required
Created by John A Adams 10/2/2013</description>
        <inlineHelpText>Enter hours and fractions of hours that speaker is involved in the event (e.g., 1.25 = 1hour and 15 minutes)</inlineHelpText>
        <label>Event Time (hrs)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Values_EVNT_MVN__c</fullName>
        <description>Posible Fee values that can be used depending on Country and Tier selected</description>
        <label>Fee Values</label>
        <picklist>
            <controllingField>Country_Tier_EVNT_MVN__c</controllingField>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>260</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>290</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>340</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Justification_EVNT_MVN__c</fullName>
        <description>Multi-Picklist created to identify reason to select the HCP for this service of work.
Created by John A Adams 10/7/2013</description>
        <label>Justification</label>
        <picklist>
            <picklistValues>
                <fullName>Recognized as a Thought Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant topic research / background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding speaking ability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trained to speak on this topic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Area knowledge / experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recognized by local peers as a SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published author in the Therapeutic Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proven effective Speaker / Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please explain)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Details_EVNT_MVN__c</fullName>
        <description>Text are to note other details about potential speaker
Created by John A Adams 10/7/2013</description>
        <label>Other Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payee_EVNT_MVN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to payee
Created by John A Adams 10/7/2013</description>
        <label>Payee</label>
        <referenceTo>Payee_EVNT__c</referenceTo>
        <relationshipName>ContractXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preparation_Time_EVNT_MVN__c</fullName>
        <description>Time in hours for contracted for Speakers preparation</description>
        <inlineHelpText>Enter hours and fractions of hours that speaker is prepared for the the event (e.g., 3.50 = 3 hours and 30 minutes)</inlineHelpText>
        <label>Preparation Time (hrs)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_of_Service_EVNT_MVN__c</fullName>
        <description>Calculation of the total time of the service.
Created by John A Adams 10/4/2013</description>
        <formula>Preparation_Time_EVNT_MVN__c  +  Travel_Time_hrs_EVNT_MVN__c  + Event_Time_EVNT_MVN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours of Service (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Time_hrs_EVNT_MVN__c</fullName>
        <description>Amount of hours the individual is traveling to and from the event
Created by John A Adams 10/7/2013</description>
        <inlineHelpText>Enter hours and fractions of hours that individual  is traveling to the event (e.g., 1.25 = 1hour and 15 minutes)</inlineHelpText>
        <label>Travel Time (hrs)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_EVNT_MVN__c</fullName>
        <description>Type of service being contracted for
Created by John A Adams 10/2/2013</description>
        <label>Type of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Speaking, Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaking, Chairman Symposium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board, Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting ad hoc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VAT_ID_EVNT_MVN__c</fullName>
        <description>A value added tax identification number or VAT identification number (VATIN) is an identifier used in many countries, including the countries of the European Union, for value added tax purposes.
Created by John A Adams 10/2/2013</description>
        <inlineHelpText>A value added tax identification number or VAT identification number (VATIN) is an identifier used in many countries, including the countries of the European Union, for value added tax purposes.</inlineHelpText>
        <label>VAT Identification #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>HCP Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CNTR-{000000}</displayFormat>
        <label>HCP Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCP Contracts</pluralLabel>
    <recordTypes>
        <fullName>Master_Service_Agreement_EVNT_MVN</fullName>
        <active>true</active>
        <description>A master agreement permits the parties to quickly negotiate future transactions or agreements.</description>
        <label>Master Service Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multiple_Event_Contract_EVNT_MVN</fullName>
        <active>true</active>
        <description>A contract for a series of meetings.</description>
        <label>Multiple-Event Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Single_Event_Contract_EVNT_MVN</fullName>
        <active>true</active>
        <description>A contract for a single meeting event.  Once meeting is over contract expires.</description>
        <label>Single Event Contract</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>